# cc_word_count_cli

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  noxfile.py  pasos.txt  pyproject.toml
tests/: test.py  test_cli.py
wc_cli/: cli.py
