[tool.poetry]
name = "wc-cli"
version = "0.1.0"
description = ""
authors = ["DanielOrtega94 <danielortegacarcamo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"

[tool.poetry.scripts]
wc_cli = "wc_cli.cli:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


