[tool.poetry]
name = "wc-cli"
version = "0.1.0"
description = ""
authors = ["DanielOrtega94 <danielortegacarcamo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
black = "^23.12.1"
nox = "^2023.4.22"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
wc_cli = "wc_cli.cli:cli"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
coverage = {extras = ["toml"], version = "^7.4.0"}
flake8 = "^7.0.0"
flake8-bugbear = "^23.12.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = ["tests/*py"]



[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
[tool.coverage.report]
fail_under = 80

[flake8]
max-line-length = 88
max-complexity = 10
exclude =[".git",
    "__pycache__",
    "*.egg-info",
    ".nox",
    ".pytest_cache",
    ".mypy_cache"]
select = ["C","E","F","W","B","B950"]
ignore = ["E203","E501","W503"]